--- a/deploy/systemd/debug-probe-hub.service
+++ b/deploy/systemd/debug-probe-hub.service
@@ -12,14 +12,13 @@ Group=debug
 WorkingDirectory=/opt/debug-probe-hub
 Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
-# Ensure Docker containers are running
+# Ensure generated compose file is up to date
 ExecStartPre=/usr/bin/python3 /opt/debug-probe-hub/generate_docker_compose_probes.py --output /opt/debug-probe-hub/docker-compose.probes.yml
-ExecStartPre=/usr/bin/docker-compose -f /opt/debug-probe-hub/docker-compose.probes.yml up -d
 
 # Start the HTTP server
 ExecStart=/usr/bin/python3 /opt/debug-probe-hub/server.py
 
-# Stop containers on service stop
+# Stop containers that may have been started on demand
 ExecStop=/usr/bin/docker-compose -f /opt/debug-probe-hub/docker-compose.probes.yml down
 
 # Restart policy - only restart on failure, not during setup issues
