--- a/config.yml
+++ b/config.yml
@@ -69,6 +69,13 @@ targets:
       cmsis-dap: cmsis_dap
     description: "Nordic nRF52840"
     compatible_probes: [jlink, cmsis-dap]
+    transports:
+      jlink:
+        default: swd
+        allowed: [swd]
+      cmsis-dap:
+        default: swd
+        allowed: [swd]
     commands:
       jlink:
         debug: "JLinkGDBServer -device nRF52840_xxAA -if SWD -speed 4000 -port {gdb_port} -select USB={serial}"
@@ -93,6 +100,10 @@ targets:
       esp-usb-jtag: esp32
     description: "Espressif ESP32-S3"
     compatible_probes: [esp-usb-jtag]
+    transports:
+      esp-usb-jtag:
+        default: jtag
+        allowed: [jtag]
     commands:
       esp-usb-jtag:
         debug: "openocd -f interface/esp_usb_jtag.cfg -f target/esp32s3.cfg -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'bindto 0.0.0.0'"
@@ -104,13 +115,20 @@ targets:
       cmsis-dap: cmsis_dap
     description: "STM32G4 series"
     compatible_probes: [jlink, cmsis-dap]
+    transports:
+      jlink:
+        default: swd
+        allowed: [swd, jtag]
+      cmsis-dap:
+        default: swd
+        allowed: [swd, jtag]
     commands:
       jlink:
-        debug: "openocd -f interface/jlink.cfg -f target/stm32g4x.cfg -c 'adapter serial {serial}' -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'bindto 0.0.0.0'"
-        flash: "openocd -f interface/jlink.cfg -f target/stm32g4x.cfg -c 'adapter serial {serial}' -c 'program {firmware_path} verify reset exit'"
+        debug: "openocd -f interface/jlink.cfg -c 'transport select {transport}' -f target/stm32g4x.cfg -c 'jlink serial {serial}' -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'bindto 0.0.0.0'"
+        flash: "openocd -f interface/jlink.cfg -c 'transport select {transport}' -f target/stm32g4x.cfg -c 'jlink serial {serial}' -c 'program {firmware_path} verify reset exit'"
       cmsis-dap:
-        debug: "openocd -f interface/cmsis-dap.cfg -f target/stm32g4x.cfg -c 'adapter serial {serial}' -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'bindto 0.0.0.0'"
-        flash: "openocd -f interface/cmsis-dap.cfg -f target/stm32g4x.cfg -c 'adapter serial {serial}' -c 'program {firmware_path} verify reset exit'"
+        debug: "openocd -f interface/cmsis-dap.cfg -c 'transport select {transport}' -f target/stm32g4x.cfg -c 'adapter serial {serial}' -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'bindto 0.0.0.0'"
+        flash: "openocd -f interface/cmsis-dap.cfg -c 'transport select {transport}' -f target/stm32g4x.cfg -c 'adapter serial {serial}' -c 'program {firmware_path} verify reset exit'"
 
   ch32v003:
     container: wch
