`fix(wch-link): enforce mode-aware transport and return explicit errors`
- set CH32V (`wch-riscv.cfg`) transport policy to `sdi` only (`default: sdi`, `allowed: [sdi]`)
- remove `transport select` injection from WCH RISC-V OpenOCD commands
- add WCH-Link mode detection by USB PID (`8010=riscv`, `8012=arm`)
- validate requested/resolved transport against probe mode and return actionable error messages
- wire validation into both `/dispatch` path and dispatcher CLI path
- update API/config docs with `sdi` usage and ARM-mode (`8012`) note

--- a/config.yml
+++ b/config.yml
@@ -137,12 +137,12 @@ targets:
     compatible_probes: [wch-link]
     transports:
       wch-link:
-        default: swd
-        allowed: [swd, jtag]
+        default: sdi
+        allowed: [sdi]
     commands:
       wch-link:
-        flash: "openocd -f /opt/wch-toolchain/OpenOCD/OpenOCD/bin/wch-riscv.cfg -c 'transport select {transport}' -c 'adapter serial {serial}' -c 'program {firmware_path} verify reset exit'"
-        debug: "openocd -f /opt/wch-toolchain/OpenOCD/OpenOCD/bin/wch-riscv.cfg -c 'transport select {transport}' -c 'adapter serial {serial}' -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'bindto 0.0.0.0'"
+        flash: "openocd -f /opt/wch-toolchain/OpenOCD/OpenOCD/bin/wch-riscv.cfg -c 'adapter serial {serial}' -c 'program {firmware_path} verify reset exit'"
+        debug: "openocd -f /opt/wch-toolchain/OpenOCD/OpenOCD/bin/wch-riscv.cfg -c 'adapter serial {serial}' -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'bindto 0.0.0.0'"
         print: "wlink serial | socat STDIN TCP-LISTEN:{rtt_port},reuseaddr,fork,bind=0.0.0.0"
 
   ch32v203:
@@ -151,12 +151,12 @@ targets:
     compatible_probes: [wch-link]
     transports:
       wch-link:
-        default: swd
-        allowed: [swd, jtag]
+        default: sdi
+        allowed: [sdi]
     commands:
       wch-link:
-        flash: "openocd -f /opt/wch-toolchain/OpenOCD/OpenOCD/bin/wch-riscv.cfg -c 'transport select {transport}' -c 'adapter serial {serial}' -c 'program {firmware_path} verify reset exit'"
-        debug: "openocd -f /opt/wch-toolchain/OpenOCD/OpenOCD/bin/wch-riscv.cfg -c 'transport select {transport}' -c 'adapter serial {serial}' -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'bindto 0.0.0.0'"
+        flash: "openocd -f /opt/wch-toolchain/OpenOCD/OpenOCD/bin/wch-riscv.cfg -c 'adapter serial {serial}' -c 'program {firmware_path} verify reset exit'"
+        debug: "openocd -f /opt/wch-toolchain/OpenOCD/OpenOCD/bin/wch-riscv.cfg -c 'adapter serial {serial}' -c 'gdb_port {gdb_port}' -c 'telnet_port {telnet_port}' -c 'bindto 0.0.0.0'"
         print: "wlink serial | socat STDIN TCP-LISTEN:{rtt_port},reuseaddr,fork,bind=0.0.0.0"
 
 # Port allocation
